src/styles.css
* {
    font-family: sans-serif;
}
html{
    scroll-behavior: smooth;
}

body::-webkit-scrollbar{
    display: none;
}
.Nav-Bar * {
    box-sizing: border-box;
}

body {
    margin: 0;
}

.pagecontainer {
    margin: 0;
}

/* NAVIGATION BAR */
.Nav-Bar {
    background-color: rgb(30, 30, 30);
    color: antiquewhite;
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    gap: 2rem;
    padding: 0 1rem;
    width:100%;
    position:fixed;
    z-index:2;
}

.Nav-Bar ul {
    padding-left: 0px;
    margin-right: 25px;
    margin-top:0;
    margin-bottom:0;
    list-style: none;
    display: flex;
    gap: 1rem;
}

.Nav-Bar a {
    color: inherit;
    text-decoration: none;
    height: 100%;
    display: flex;
    align-items: center;
    padding: 0.25rem;
}

.Site-Title {
    font-size: 1.7rem;
    justify-content: left;
}

.Nav-Bar li.active {
    /*background-color: rgb(82, 82, 82);*/
    color:red;
}

.Nav-Bar li:hover {
    color:red;
    transition:0.2s;
}

/* FOOTER */
footer {
    background-color: rgb(30, 30, 30);
}

.footer-container {
    width: 100%;
    padding: 70px 30px 20px;
}

.social-icons {
    display: flex;
    justify-content: center;
}
.mycontacts-icons {
    margin-top:50px;
    display: flex;
    justify-content: center;
    gap:30px;
    margin-bottom:70px;
    padding: 0 105px;
}
.social-icons a {
    text-decoration: none;
    padding: 10px;
    background-color: antiquewhite;
    margin: 10px;
    border-radius: 50%;
}
.mycontacts-icons a {
    text-decoration: none;
    padding: 10px;
    background-color:red;
    margin: 10px;
    border-radius: 50%;
    border:3px solid white;
}
.mycontacts-icons a i {
    font-size: 2rem;
    color: white;
    padding: 0;
    margin: 0;
}

.mycontacts-icons a:hover {
    background-color: white;
    color:red;
    border:3px solid red;
}
.mycontacts-icons a:hover i{
    color: rgb(255, 0, 0);
    padding: 0;
    margin: 0;
}
.social-icons a i {
    font-size: 2rem;
    color: rgb(20, 20, 20);
    opacity: 90%;
    padding: 0;
    margin: 0;
}

.social-icons a:hover {
    background-color: red;
    transition: 0.2s;
}

.footerNav {
    margin: 30px 0;
}

.footerr {
    display: flex;
    justify-content: center;
}

.footerNav ul {
    list-style: none;
    justify-content: center;
    display: flex;
    padding: 0;
    margin: 0;
}

.footerNav ul a {
    text-decoration: none;
    color: antiquewhite;
    margin: 20px;
    font-size: 1.3rem;
}

.footerNav ul a:hover {
    transition: 0.2s;
    color:red;
}

.footerEndLine {
    background-color: rgb(20,20,20);
    text-align: center;
    padding: 5px;
}

.footerEndLine p {
    color: antiquewhite;
}

.footerr {
    box-sizing: border-box;
}

/* HOME PAGE */
.homeHeader-container {
    width: 100%;
    height: auto;
    justify-content: center;
}

.homeHeader {
    width: 100%;
    height: auto;
    background-image: url(./media/batik.png);
    background-size: cover;
    background-position: 69%;
    line-height: 4.2rem;
    padding-top: 70px;
    display: flex;
    justify-content: center;
    margin-bottom:70px;
}

.header-text {
    margin-top: 0px;
    align-items: center;
    justify-content: center;
    color:antiquewhite;
}

.header-text h2 {
    letter-spacing: 3px;
    font-weight: bold;
    font-size: 20px;
    margin-top: 0;
    margin-bottom: 0;
    display: flex;
    justify-content: center;
}

.header-text h1 {
    font-size: 80px;
    margin-top: 0;
    margin-bottom: 0;
    display: flex;
    justify-content: center;
    letter-spacing: 8px;
}

.profile-image {
    border-radius: 50%;
    width: 150px;
    background: antiquewhite;
    padding: 4px;
    justify-content: center;
}

.profile-container {
    display: flex;
    justify-content: center;
    margin-bottom: 15px;
}
.header-buttons{
    margin-top:0;
}

#btn-header {
    width: 130px;
    height: 35px;
    font-weight: bold;
    background-color: antiquewhite;
    letter-spacing: 0px;
    color: #6b0200;
    border-radius: 20px;
    border-color: antiquewhite;
    border-style: solid;
    cursor: pointer;
    margin-top: 0;
}

#btn-header-2 {
    width: 130px;
    height: 35px;
    font-weight: bold;
    background-color: #6b0200;
    letter-spacing: 0px;
    color: antiquewhite;
    border-radius: 20px;
    border-color: antiquewhite;
    border-style:solid;
    border-width:2px;
    cursor: pointer;
}
#btn-header-2:hover{
    background-color: antiquewhite;
    color:#6b0200;
    border-color: antiquewhite;
}
#btn-header:hover{
    background-color: #6b0200;
    color:antiquewhite;
    border-color: antiquewhite;
}

.button-container {
    display: flex;
    gap: 1.3rem;
    justify-content: center;
    margin-top: 0;
}

.block-quote {
    margin-top:0;
    padding: 0;
    font-weight: 300;
    color: #545454;
    font-size: 15px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

blockquote {
    align-items: center;
    display: flex;
    position: relative;
    justify-content: center;
    width: 50%;
    margin: 3rem auto;
    padding: .5rem;
    font-size: 1.5rem;
    line-height: 1.5rem;
    font-family: 'Times New Roman', Times, serif;
}

blockquote::before {
    content: '\201c';
    top: 10px;
    bottom: -40px;
    left: -45px;
}

blockquote::after {
    content: '\201d';
    bottom: -30px;
    right: -35px;
}

blockquote::before,
blockquote::after {
    font-size: 6rem;
    position: absolute;
}

.desc-container {
    padding: 105px;
    padding-top: 0;
    padding-bottom: 0;
    color: rgb(20, 20, 20);
    text-align: justify;
}

.desc-container p {
    font-size: 1.2rem;
}

.desc-container p::first-letter {
    font-size: 2rem;
    color: red;
    font-weight: bold;
    letter-spacing: 4px;
}

.project-highlights h1 {
    margin-top: 75px;
    color: red;
    font-weight: bold;
    padding-left: 55px;
}

.breaker-line {
    padding-left: 105px;
    padding-right: 105px;
    margin: 0;
}

.breaker-line hr {
    border-top: 4px solid red;
}

.ph-button-container {
    display: flex;
    justify-content: center;
    margin-top: 16px;
    margin-bottom:30px;
}

#ph-button {
    border-radius: 20px;
    color: rgb(255, 0, 0);
    background-color: rgb(255, 255, 255);
    border: 3px solid red;
    padding: 8px 16px;
    font-size: 17px;
}
#ph-button:hover {
    border-radius: 20px;
    color:white;
    background-color: red;
    border: 3px solid white;
    padding: 8px 16px;
    font-size: 17px;
}
.exph-container {
    padding: 105px;
    padding-top: 0;
    padding-bottom: 0;
    color: rgb(20, 20, 20);
    text-align: justify;
    margin-top:50px;
    font-size: 20px;
    text-align: center;
}
/* PROJECTS PAGE */

.cards-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin-top: 50px;
}

.card {
    width: 325px;
    background-color: #ffffff;
    border-radius: 8px;
    overflow: hidden;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
    margin: 20px;
}
.card:hover{
    width: 325px;
    background-color: #ffffff;
    border-radius: 8px;
    overflow: hidden;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
    margin: 20px;
    transform:translateY(-10px);
}

.card img {
    width: 100%;
    height: 200px;
    flex: 1 0 100%;
    object-fit: cover;
}

.card-content {
    padding: 16px;
}

.card-content h3 {
    font-size: 28px;
    margin-bottom: 8px;
}

.card-content p {
    color: #343434;
    font-size: 15px;
    line-height: 1.3;
}

.card-content .btn-card {
    display: inline-block;
    padding: 8px 16px;
    background-color: red;
    text-decoration: none;
    border-radius: 20px;
    margin-top: 16px;
    color: white;
    border:3px solid white;
}
.card-content .btn-card:hover {
    display: inline-block;
    padding: 8px 16px;
    background-color: white;
    text-decoration: none;
    border-radius: 20px;
    margin-top: 16px;
    color:red;
    border:3px solid rgb(255, 0, 0);
}
.icons-container-projects{
    margin:0;
    padding:0;
    color:rgb(20,20,20);
    display:flex;
    gap:0.7rem;
}
.icons-container-projects i{
    font-size:1.3em;
}
/* EXPERIENCE PAGE */
.experiencesPage {
    margin: 0;
    font-family: sans-serif;
    color: black;
    padding: 2em;
}

.experiencePage * {
    margin: 0;
    padding: 0;
}

.experiencePage-title {
    text-align: center;
    margin-top:45px;
    font-size: 1.4em;
    color:rgb(20,20,20)
}

.experiencePage-title p {
    font-size: 1.3em;
    letter-spacing: 2px;
}

.experiencePage h1 {
    margin: 0.3em;
    font-size: 3em;
}

.experiencePage h2 {
    margin-bottom: 0.5em;
}

.timeline {
    margin: 5em auto;
    max-width: 34.15em;
}

.checkpoint {
    max-width: 34em;
    padding-top: 2em;
    padding-bottom: 2em;
    position: relative;
    color:rgb(20, 20, 20);
}

.checkpoint div {
    border: 2px solid rgb(20,20,20);
    border-radius: 1em;
    padding: 1.5em;
}

.checkpoint p {
    line-height: 27px;
    color: rgb(30,30,30);
}

.checkpoint:nth-child(odd) {
    border-left: 3px solid rgb(20,20,20);
    padding-left: 3em;
    transform: translateX(17em);
}

.checkpoint:nth-child(even) {
    border-right: 3px solid rgb(20,20,20);
    padding-right: 3em;
    transform: translateX(-17em);
}

.checkpoint:nth-child(even)::before,
.checkpoint:nth-child(odd)::before {
    content: '';
    background: rgb(20,20,20);
    width: 3em;
    height: 3px;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}

.checkpoint:nth-child(odd)::before {
    left: 0;
}

.checkpoint:nth-child(even)::before {
    right: 0;
}

.checkpoint:nth-child(odd) div::before,
.checkpoint:nth-child(even) div::before {
    content: '';
    background: rgb(20, 20, 20);
    box-shadow: 0 0 0.5em #777;
    width: 0.8em;
    height: 0.8em;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    border-radius: 50%
}

.checkpoint:nth-child(odd) div::before {
    left: -0.5em;
}

.checkpoint:nth-child(even) div::before {
    right: -0.5em;
}
/*PROJECTS PAGES*/
.projects-Pages {
    margin: 0;
    font-family: sans-serif;
    color: rgb(20,20,20);
    padding:2em;
    text-align: justify;
}
.projects-Pages-title {
    text-align: center;
    margin-top:45px;
    font-size: 1.4em;
    margin-bottom:60px;
    color:rgb(20,20,20)
}
.projects-Pages p{
    padding:0 105px;
}
.projects-Pages-content p::first-letter{
    font-size: 2rem;
    color: red;
    font-weight: bold;
    letter-spacing: 4px;
}
.project-Pages-Photos-Container{
    padding: 0 105px;
    text-align: center;
}
.project-Pages-Photos-Container img{
    height:400px;
    margin: 70px 20px;
    max-width: 400px;
}
.project-Pages-Photos-Container video{
    height:300px;
    width:100%;
    margin-top:70px;
}
/* MOBILE VIEW */
@media (max-width:1150px) {
    .footerr {
        display: flex;
        justify-content: center;
        text-align: center;
    }

    .footerNav ul {
        flex-direction: column;
    }

    .footerNav ul li {
        width: 100%;
        text-align: center;
        margin: 10px 0;
    }

    .header-text h1 {
        font-size: 55px;
        margin-top: 0;
        margin-bottom: 0;
        display: flex;
        justify-content: center;
    }
    .header-text h2 {
        font-size: 18px;
    }
    .profile-image {
        width:120px;
    }
    .desc-container {
        padding: 0 65px;
    }
    .mycontacts-icons{
        gap:20px;
    }
    .timeline {
        width: 80vw;
    }

    .timeline .checkpoint {
        width: 100%;
        transform: none;
        padding-left: 0;
        padding-right: 0;
        border: none;
    }

    .timeline .checkpoint::before {
        width: 3px;
        height: 4em;
        top: -2em;
        left: 50%;
        transform: translateX(-50%);
    }

    .timeline .checkpoint div::before {
        top: -0.5em;
        left: 50%;
        transform: translateX(-50%);
    }
    .projects-Pages p{
        padding:0 55px;
    }
}

